src/test/deca/syntax/valid/cast.deca
{

int x = 8;
float y = 4.0;

y=(float)(x);

}