src/test/deca/syntax/invalid/testReservedName2.deca
{
    float asm = 2.0;
}